feat: 밸런스게임 검색 시 CopyOnWriteArrayList 사용